k8s/agents-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  agents-service
spec:
  selector:
    name:  agents
  type:  ClusterIP 
  ports:
  - name:  name-of-the-port
    port:  80
    targetPort:  3000
