k8s/auth-service.yml
kind: Service
apiVersion: v1
metadata:
  name:  auth-service
spec:
  selector:
    name:  auth
  type:  ClusterIP 
  ports:
  - name:  auth-port
    port:  80
    targetPort:  3000
