k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agentnexus-ingress
  namespace: default
  annotations: {}
spec:
  ingressClassName: nginx
  rules:

     - http:
        paths:
          - path: /api/sandbox
            pathType: Prefix
            backend:
              service:
                name: sandbox-service
                port:
                  number: 80

          - path: /api/agents
            pathType: Prefix
            backend:
              service:
                name: agents-service
                port:
                  number: 80

          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
                  
          - path: /
            pathType: Prefix
            backend:
              service:
                name: router-service
                port:
                  number: 80
